PEL -- Pragmatic Emacs Library --  NEWS         -*- org -*-

* Changes since Version 0.4.1:
** Modifications, Fixes and Improvements:
- The *pel-open-at-point* command, bound to ~M-<f6>~ and ~<f11> f .~ can now be used inside emacs-lisp-mode buffers.
  It uses the Emacs Lisp library searching mechanism as the search function: the
  *pel-filename-at-point-finders* is set to the new function *pel-elisp-find-file*.
- Refactored Perl customization group, splitting it in 3 parts; the
  activation, the general settings that applies to both perl-mode and
  cperl-mode and the perl-mode and cperl-mode specific. This helps clarify the
  control for indentation and other things. The indentation is now controlled
  by the new *pel-general-perl-indent-level* user-option; it applies to both
  perl-mode and cperl-mode.  The use of hard tabs is controlled by the new
  *pel-general-perl-use-tabs* user option.
- Add ~<f12> ?~ key binding to *cperl-perldoc-at-point*
- Add utilities to list edesktops+ desktops currently available, used and by what process.
  These shell utilities are located in the PEL bin directory.
  The PEL setup/install-emacs-edesktops.sh script can be used to create symlinks into
  the $HOME/bin directory and verifies if that is in the current PATH.
  These help checking which Emacs desktop session is currently being used in a system.
- Remove the ~C-c /~ global binding to *hide-lines* because it conflicts with the pcre2el command prefix.
- Add *pel-align-words-vertically*, bound to ~<f11> t a w~. It aligns all words of lines in the marked are
  in columns.  It uses the new pel-hash functions that provide hash of lists.
- Add *pel-perl-critic*, bound to ~<f12> c~, which analyzes the Perl file visited in the current buffer
  with the perlcritic application.
- Modified some key bindings for search:
  - changed *pel-search-word-from-top* from ~<f11> s .~ to ~<f11> s w .~
  - bound *isearch-forward-symbol-at-point* to ~<f11> s .~