@@ -156,7 +156,7 @@ but *only* when the complete string is enclosed in double quotes
              (concat
               ;;     G1         g1    G2     g2   G3 G4 G5        g5
               ;;     (-----------)   (--------)   (  (  (----------)
-              "^\\`\\([a-zA-Z]:\\)?\\([^:@]+?\\)\\(\\(\\( *[:@] *\\)"
+              "^\\`\\([a-zA-Z]:\\)?\\([^@]+?\\)\\(\\(\\( *[:@] *\\)"
               ;; G6       g6 g4  G7 G8
               ;; (---------)  )  (  (----------)
               "\\([0-9]+?\\)\\)\\(\\( *[:@] *\\)"
